[package]
name = "asciirunner"
version = "0.1.0"
authors = ["Jimmy Kiang <castlevanity@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = { git = "https://github.com/amethyst/bracket-lib.git" }